# wifi_connector_server

./: Cargo.toml  Readme.md
src/: main.rs
static/: app.js  index.html
