[package]
name = "wifi_rest"
version = "0.1.0"
authors = ["Beat Wolf <beat.wolf@hefr.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve"]